crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@16.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE num_exp_sqrt (id int4, expected numeric(1000,800));"
---
CreateStmt@0..64
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..25
    Ident@13..25 "num_exp_sqrt"
  Whitespace@25..26 " "
  Ascii40@26..27 "("
  ColumnDef@27..34
    Ident@27..29 "id"
    Whitespace@29..30 " "
    TypeName@30..34
      Ident@30..34 "int4"
  Ascii44@34..35 ","
  Whitespace@35..36 " "
  ColumnDef@36..61
    Ident@36..44 "expected"
    Whitespace@44..45 " "
    TypeName@45..61
      Numeric@45..52 "numeric"
      Ascii40@52..53 "("
      AConst@53..57
        Iconst@53..57 "1000"
      Ascii44@57..58 ","
      AConst@58..61
        Iconst@58..61 "800"
  Ascii41@61..62 ")"
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

